force-app/main/default/objects/BreachIndicator__e/BreachIndicator__e.object-meta.xml
<CustomObject>
    <label>Breach Indicator</label>
    <pluralLabel>Breach Indicators</pluralLabel>
</CustomObject>