force-app/main/default/objects/BreachIndicator__e/fields/Affected_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Affected_User_Id__c</fullName>
    <label>Affected User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>