force-app/main/default/objects/BreachIndicator__e/fields/Event_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Event_Sequence__c</fullName>
    <label>Event Sequence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>