force-app/main/default/objects/BreachIndicator__e/fields/Pattern_Name__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Name__c</fullName>
    <label>Pattern Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>